:bug: fix: bug/SX-328_align_text_on_protfolio_card

--- a/src/app/modules/funds/shared-funds/components/fund-portfolio-card/fund-portfolio-card.component.scss
+++ b/src/app/modules/funds/shared-funds/components/fund-portfolio-card/fund-portfolio-card.component.scss
@@ -35,7 +35,7 @@
         }
         .base {
           margin-top: 10px;
-          display: flex;
+          text-align: right;
           align-items: center;
           justify-content: space-between;
           .change-currency {
